[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menu/InGame/InGameMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Resources/stars.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/high-score.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/score-unpressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Resources/score-pressed.png" type="Texture" id=6]
[ext_resource path="res://Menu/InGame/resume-unpressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/InGame/resume-pressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/InGame/restart-unpressed.png" type="Texture" id=9]
[ext_resource path="res://Menu/InGame/restart-pressed.png" type="Texture" id=10]
[ext_resource path="res://Menu/Resources/options-unpressed.png" type="Texture" id=11]
[ext_resource path="res://Menu/Resources/options-pressed.png" type="Texture" id=12]
[ext_resource path="res://Menu/InGame/exit-unpressed.png" type="Texture" id=13]
[ext_resource path="res://Menu/InGame/exit-pressed.png" type="Texture" id=14]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 600, 250 )

[node name="InGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 1441.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 162.0
margin_right = 1441.0
margin_bottom = 912.0
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer"]
margin_right = 897.0
margin_bottom = 750.0
size_flags_horizontal = 3
custom_constants/separation = 55
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 897.0
margin_bottom = 284.0
rect_min_size = Vector2( 600, 250 )
texture = SubResource( 3 )
stretch_mode = 4

[node name="high-score" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 339.0
margin_right = 897.0
margin_bottom = 510.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="ScoreButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 565.0
margin_right = 897.0
margin_bottom = 715.0
rect_min_size = Vector2( 778, 150 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 901.0
margin_right = 1441.0
margin_bottom = 750.0
rect_min_size = Vector2( 0, 750 )
custom_constants/separation = 25
alignment = 1

[node name="ResumeButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 540.0
margin_bottom = 186.0
rect_min_size = Vector2( 540, 150 )
size_flags_horizontal = 8
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2

[node name="RestartButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 540.0
margin_bottom = 362.0
rect_min_size = Vector2( 540, 150 )
size_flags_horizontal = 8
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
stretch_mode = 2

[node name="OptionsButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 540.0
margin_bottom = 538.0
rect_min_size = Vector2( 540, 0 )
size_flags_horizontal = 8
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
stretch_mode = 2

[node name="ExitButton" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 563.0
margin_right = 540.0
margin_bottom = 714.0
rect_min_size = Vector2( 540, 0 )
size_flags_horizontal = 8
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
stretch_mode = 2

[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer2/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
